--- a/css/app.css
+++ b/css/app.css
@@ -62,7 +62,7 @@ body {
   object-position: center;
   background-size: cover;
   width: 100%;
-  height: 200vh;
+  /* height: 200vh; */
 }
 
 .bg-function2 {
