--- a/css/app.css
+++ b/css/app.css
@@ -130,7 +130,7 @@ body {
 }
 
 .function-gradient {
-  background: linear-gradient(45deg, black, transparent);
+  background: linear-gradient(45deg, transparent, black);
 }
 
 .function2-gradient {
