--- a/css/app.css
+++ b/css/app.css
@@ -112,7 +112,7 @@ body {
   object-fit: cover;
   background-size: cover;
   width: 100%;
-  /* height: 100vh; */
+  height: 100vh;
 }
 
 .bg-login {
