--- a/css/app.css
+++ b/css/app.css
@@ -107,7 +107,7 @@ body {
 
 .bg-partners3 {
   background: url("/assets/partners3.png") no-repeat;
-  background-position: center;
+  background-position: top;
   object-position: center;
   object-fit: cover;
   background-size: cover;
@@ -116,13 +116,22 @@ body {
 }
 
 .bg-login {
-  background: url("/assets/homeimage1.jpg") no-repeat;
-  background-position: center;
+  background: url("/assets/bg_login.jpg") no-repeat;
+  background-position: 0% 70%;
   object-position: center;
   object-fit: cover;
   background-size: cover;
   width: 100%;
   height: 100vh;
+}
+
+.bg-shop {
+  background: url("/assets/partners1.png") no-repeat;
+  background-position: bottom;
+  object-position: center;
+  object-fit: cover;
+  background-size: cover;
+  width: 100%;
 }
 
 .home-gradient {
